add post.updated_at parser in for Post model for returning appropriate formats

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div> <%= link_to post.author.username %> </div>
-  <div> <small> <%= post.updated_at.strftime("%l: %M %P %b %d, %Y") %> </small> </div>
+  <div> <small> <%= post.time %> </small> </div>
 
   <div>
     <p> <%= post.content %> <p>
