add lines for rendering comments and comment forms

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,8 +13,9 @@
   <div>
   <div>
     <span> <%= link_to 'Like' %> </span>
-    <span> <%= link_to 'Comment' %> </span>
     <span> <%= link_to 'Share' %> </span>
   </div>
+  <%= render "comments/form", commentable: post, commenter: current_user %>
+  <%= render "comments/comment", collection: post.comments %>
   <br>
 </div>
