add comments views and forms in post cards

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <div> <strong> <%= comment.user %> </strong> </div>
+  <div> <strong> <%= comment.user.username %> </strong> </div>
   <div> <%= comment.content %> </div>
-  <div> <small> <%= comment.time %> <small> </div>
+  <div> <small> <%= comment.time %> </small> </div>
 </div>
