add post counter updates when liking

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div>
-    <span> <%= post.likes_count %> likes </span>
+    <span class='likes-count' data-id='<%= post.id %>'> <%= post.likes_count %> </span> likes
     <span> <%= post.comments.count %> comments </span> 
     <span> <%= post.shares_count %> shares </span> 
   <div>
