--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -19,7 +19,9 @@
         </span> 
       <% end %>
     </span>
-    <span> <%= link_to 'Share' %> </span>
+    <span> 
+      <%= link_to 'Share', share_post_path(post), remote: true, method: :post %> 
+    </span>
   </div>
   <%= render "comments/form", comment: Comment.new(post: post) %>
   <%= render partial: "comments/comment", collection: post.comments %>
