add link to friends in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
       <div class="menu">
           <div> <%= link_to 'Messages' %> </div>
-          <div> <%= link_to 'Friends' %> </div>
+          <div> <%= link_to 'Friends', users_path %> </div>
           <div> <%= link_to 'Notification' %> </a></div>
       </div>
     </nav>
