make users index view user partials _user_preview and partial buttons for user connection interactions

--- a/app/views/users/_user_preview.html.erb
+++ b/app/views/users/_user_preview.html.erb
@@ -1,10 +1,10 @@
 <div class="user-preview">
   <%= link_to user_path(user) do %>
     <div class="name">
-      <%= user.username %>
-    </div>
-    <div class="mutual-friend-count">
-      <%= user.mutual_friends(current_user).count %>
+      <strong> <%= user.username %> </strong>
     </div>
   <% end %>
+  <div class="mutual-friend-count">
+    <%= user.mutual_friends(current_user).count %>
+  </div>
 </div>
