--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,17 @@
-<div name="friends">
-  <strong>Friends</strong><br>
-  <% @friends.each do |friend| %>
-    <div> <%= link_to friend.username, user_path(friend) %> </div>
+<br>
+<div class="friend-requests">
+  <% @received_requests.each do |received_request| %>
+    <% initiator = received_request.initiator %>
+    <%= render 'user_preview', user: initiator %>
+    <%= render 'accept_connection_button', connection: received_request %>
+    <%= render 'delete_connection_button', connection: received_request, label: 'delete' %>
+    <br>
   <% end %>
 </div>
-<br>
 
-<div name="friend_requests">
-  <%= link_to 'Friend Requests' %>
-</div>
-<br>
-
-<div name="friend_suggestions">
-  <strong>People</strong><br>
-  <% @friend_suggestions.each do |friend_suggestion| %>
-    <section name="suggestion">
-      <span name="user_link"> <%= link_to friend_suggestion.username, user_path(friend_suggestion.id) %> </span> 
-      <span name="request_button"> <%= link_to 'Add friend', add_user_connections_path(friend_suggestion), method: :post %> </span> <br>
-      <% mutual_friends_count = friend_suggestion.mutual_friends(current_user).count %> 
-      <sup> <%= pluralize(mutual_friends_count, 'mutual friend' ) %> </small>
-    </section>
+<div class="suggestions">
+  <% @suggestions.each do |suggestion| %>
+    <%= render 'user_preview', user: suggestion %>
+    <%= render 'add_connection_button', viewee: suggestion %>
   <% end %>
 </div>
