fix call for shared_post partial in post partial

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,7 +7,7 @@
 
     <% post.attachments.each do |attachment| %>
       <p> 
-        <%= render('shared_post', post: attachment.attachable) if attachment.attachable_type == 'Post' %>
+        <%= render('posts/shared_post', post: attachment.attachable) if attachment.attachable_type == 'Post' %>
       </p>
     <% end%>
   </div>
