--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,7 @@
 <div>
-  <div> <strong> <%= comment.user.username %> </strong> </div>
+  <small>
+  <div> <strong> <%= link_to comment.user.username, comment.user %> </strong> </div>
   <div> <%= comment.content %> </div>
   <div> <small> <%= comment.time %> </small> </div>
+  </small>
 </div>
