--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <div> <%= link_to post.author.username, user_path(post.author) %> </div>
+  <div> <strong> <%= link_to post.author.username, user_path(post.author) %> </strong> </div>
   <div> <small> <%= post.time %> </small> </div>
 
   <div name='content'>
