--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+<div class="break">
+  <br>
+  <br>
+</div>
+
 <div class="user">
   <div class="user-info">
     <strong><%= @user.username %> </strong><br>
@@ -7,6 +12,11 @@
   <div class="user-interaction">
     <%= render 'connection_interface', connection: @connection, viewee: @user %>
   </div>
+</div>
+
+<div class="break">
+  <br>
+  <br>
 </div>
 
 <div class="user-posts">
