--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,6 +15,8 @@
     <%= form.text_area :content, placeholder: 'Post Something' %>
   </div>
 
+  <%= render 'shared_post', post: @attached_post if @attached_post %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
