accepted changes for user_spec, add hidden field in user form for attached post

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,6 +17,8 @@
 
   <%= render 'shared_post', post: @attached_post if @attached_post %>
 
+  <%= form.hidden_field :attachment, value: @attached_post.id %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
