fix user_preview to display "mutual_friends" text after mutual friends count

--- a/app/views/users/_user_preview.html.erb
+++ b/app/views/users/_user_preview.html.erb
@@ -5,6 +5,6 @@
     </div>
   <% end %>
   <div class="mutual-friend-count">
-    <%= user.mutual_friends(current_user).count %>
+    <%= pluralize(user.mutual_friends(current_user).count, 'mutual friends') %>
   </div>
 </div>
