--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,9 @@
       </div>
 
       <div class="menu">
-          <div> <%= link_to current_user.username, profile_path %>
-          </div>
+          <% if user_signed_in? %>
+            <div> <%= link_to current_user.username, profile_path %> </div>
+          <% end %>
           <div> <%= link_to 'Messages' %> </div>
           <div> <%= link_to 'Friends', users_path %> </div>
           <div> <%= link_to 'Notification' %> </a></div>
