fix call to rendering nested shared posts, first call was rendering the initial shared_post for all levels.

--- a/app/views/posts/_shared_post.html.erb
+++ b/app/views/posts/_shared_post.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <% if shared_post.shared_post %>
-      <%= render 'shared_post', shared_post: shared_post %>
+      <%= render 'shared_post', shared_post: shared_post.shared_post %>
     <% else %>
       <!-- render media attachments -->
     <% end %>
