--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Post</h1>
 
-<%= render 'form', post: @post %>
+<%= render 'form', post: @post, post_to_share: @post_to_share %>
+
 
 <%= link_to 'Back', posts_path %>
