--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -32,10 +32,10 @@
       <% end %>
     </span>
     <span> 
-      <%= link_to 'Share now', share_post_path(post), remote: true, method: :post %> 
+      <%= link_to 'Share to feed', share_feed_posts_path(post), remote: true, method: :post %> 
     </span>
     <span>
-      <%= link_to 'Share to Feed', share_with_content_post_path(post), method: :get %>
+      <%= link_to 'Share', share_posts_path(post), method: :get %>
     </span>
   </div>
   <%= render "comments/form", comment: Comment.new(post: post) %>
