fix render on shared_post to posts/shared_post
shared_post partial can't be found in previous version
  since _post being called after a users action

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <% if post.shared_post %>
-      <%= render 'shared_post', shared_post: post.shared_post %>
+      <%= render 'posts/shared_post', shared_post: post.shared_post %>
     <% else %>
       <!-- render media attachments -->
     <% end %>
