fix _post partial
add edit and delete link to _post partial when post is owned by
current_user

make both share links as actual buttons

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,11 @@
 <div>
   <div> <strong> <%= link_to post.author.username, user_path(post.author.id) %> </strong> </div>
+  <% if post.author == current_user %>
+    <div class="post-controls">
+      <span> <small> <%= link_to 'Edit', edit_post_path(post) %> </small> </span>
+      <span> <small> <%= link_to 'Delete', delete_post_path(post), remote: true, method: :delete %> </small> </span>
+    </div>
+  <% end %>
   <div> <small> <%= post.time %> </small> </div>
 
   <div name='content'>
@@ -32,10 +38,18 @@
       <% end %>
     </span>
     <span> 
-      <%= link_to 'Share to feed', share_to_feed_post_path(post), remote: true, method: :post %> 
+      <%= link_to share_to_feed_post_path(post), remote: true, method: :post do %> 
+        <button class="share-to-feed">
+          Share to feed
+        </button>
+      <% end %>
     </span>
     <span>
-      <%= link_to 'Share', share_post_path(post), method: :get %>
+      <%= link_to share_post_path(post), method: :get do %>
+        <button class="share">
+          Share 
+        </button>
+      <% end %>
     </span>
   </div>
   <%= render "comments/form", comment: Comment.new(post: post) %>
