--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: comment ) do |form| %>
   <div class="field">
-    <%= form.text_field :content, placeholder: 'Write a comment' %>
+    <%= form.text_field :content, placeholder: 'Write a comment', autocomplete: 'off' %>
   </div>  
 
   <%= form.hidden_field :post_id, value: comment.post.id %>
