made minor changes in texts in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <% end %>
           <div> <%= link_to 'Messages' %> </div>
           <div> <%= link_to 'Friends', users_path %> </div>
-          <div> <%= link_to 'Notification' %> </a></div>
+          <div> <%= link_to 'Notifications' %> </a></div>
       </div>
     </nav>
     <%= yield %>
