fix toggle like button to update on click

--- a/app/views/posts/toggle_like.js.erb
+++ b/app/views/posts/toggle_like.js.erb
@@ -2,7 +2,7 @@ var postId = '<%= @post.id %>'
 
 function toggleLike(postId, innerHTML) {
   let like_button = document.querySelector(
-    `.like-toggle[data-id='${postId}']`
+    `.like-toggle-button[data-id='${postId}']`
   )
 
   let likes_count = document.querySelector(
