--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
 
 <%= render 'form', post: @post %>
-<%= render partial: "post", collection: @posts %>
+<div class="posts">
+  <%= render partial: 'post', collection: @posts %>
+</div>
